BareMetalBase/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:49:04 **** Incremental Build of configuration Debug for project 3_GPIO_BSRR ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "3_GPIO_BSRR.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/michael/Documents/Udemy/Embedded/BareMetalBase/3_GPIO_BSRR/STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="3_GPIO_BSRR.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 3_GPIO_BSRR.elf
 
arm-none-eabi-size   3_GPIO_BSRR.elf 
arm-none-eabi-objdump -h -S  3_GPIO_BSRR.elf  > "3_GPIO_BSRR.list"
   text	   data	    bss	    dec	    hex	filename
    764	      8	   1568	   2340	    924	3_GPIO_BSRR.elf
Finished building: default.size.stdout
 
Finished building: 3_GPIO_BSRR.list
 
13:49:18 **** Incremental Build of configuration Debug for project 3_GPIO_BSRR ****
make -j8 all 
arm-none-eabi-size   3_GPIO_BSRR.elf 
   text	   data	    bss	    dec	    hex	filename
    764	      8	   1568	   2340	    924	3_GPIO_BSRR.elf
Finished building: default.size.stdout
 
14:05:23 **** Build of configuration Debug for project 4_gpio_input ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f411retx.d" -MT"Startup/startup_stm32f411retx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f411retx.o" "../Startup/startup_stm32f411retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/main.c:11:10: error: expected identifier or '(' before '=' token
   11 | uint32_t = input_data;
      |          ^
../Src/main.c: In function 'main':
../Src/main.c:23:3: error: 'input_data' undeclared (first use in this function)
   23 |   input_data = GPIOC->(IDR & (1U << 13));
      |   ^~~~~~~~~~
../Src/main.c:23:3: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:23:23: error: expected identifier before '(' token
   23 |   input_data = GPIOC->(IDR & (1U << 13));
      |                       ^
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
14:06:11 **** Incremental Build of configuration Debug for project 4_gpio_input ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:14:11: error: expected identifier or '(' before '=' token
   14 |  uint32_t = input_data;
      |           ^
../Src/main.c:25:3: error: 'input_data' undeclared (first use in this function)
   25 |   input_data = GPIOC->(IDR & (1U << 13));
      |   ^~~~~~~~~~
../Src/main.c:25:3: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:25:23: error: expected identifier before '(' token
   25 |   input_data = GPIOC->(IDR & (1U << 13));
      |                       ^
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
14:06:42 **** Incremental Build of configuration Debug for project 4_gpio_input ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:25:23: error: expected identifier before '(' token
   25 |   input_data = GPIOC->(IDR & (1U << 13));
      |                       ^
../Src/main.c:14:11: warning: variable 'input_data' set but not used [-Wunused-but-set-variable]
   14 |  uint32_t input_data = 0;
      |           ^~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
14:23:52 **** Incremental Build of configuration Debug for project 4_gpio_input ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "4_gpio_input.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/michael/Documents/Udemy/Embedded/BareMetalBase/4_gpio_input/STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="4_gpio_input.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 4_gpio_input.elf
 
arm-none-eabi-size   4_gpio_input.elf 
arm-none-eabi-objdump -h -S  4_gpio_input.elf  > "4_gpio_input.list"
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	4_gpio_input.elf
Finished building: default.size.stdout
 
Finished building: 4_gpio_input.list
 
14:51:10 **** Incremental Build of configuration Debug for project 4_gpio_input ****
make -j8 all 
arm-none-eabi-size   4_gpio_input.elf 
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	4_gpio_input.elf
Finished building: default.size.stdout
 
14:56:46 **** Incremental Build of configuration Debug for project 4_gpio_input ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Include -I/home/michael/Documents/Udemy/Embedded/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "4_gpio_input.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/michael/Documents/Udemy/Embedded/BareMetalBase/4_gpio_input/STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="4_gpio_input.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 4_gpio_input.elf
 
arm-none-eabi-size   4_gpio_input.elf 
arm-none-eabi-objdump -h -S  4_gpio_input.elf  > "4_gpio_input.list"
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	4_gpio_input.elf
Finished building: default.size.stdout
 
Finished building: 4_gpio_input.list
 
